--- a/timebox-assessment-es6/SpecRunner.html
+++ b/timebox-assessment-es6/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="test/lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="helper.js"></script>
   <script src="es6.js"></script>
 
   <!-- include spec files here... -->
