edits to functions

--- a/timebox-assessment-functions/SpecRunner.html
+++ b/timebox-assessment-functions/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="test/lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="helper.js"></script>
   <script src="functions.js"></script>
 
   <!-- include spec files here... -->
