--- a/timebox-assessment-functions/index.html
+++ b/timebox-assessment-functions/index.html
@@ -16,6 +16,7 @@
     
     <p>Checkout <a href="https://developer.chrome.com/devtools/docs/javascript-debugging">The chrome over view of debugging</a></p>
 
+    <script src="helper.js"></script>
     <script src="functions.js"></script>
     
 </body>
