added student ready and broke out async promises, json

--- a/assessment-async-promises-STUDENT-READY/index.html
+++ b/assessment-async-promises-STUDENT-READY/index.html
@@ -17,7 +17,7 @@
     <p>Checkout <a href="https://developer.chrome.com/devtools/docs/javascript-debugging">The chrome over view of debugging</a></p>
 
     <script src="helper.js"></script>
-    <script src="async-promises-json.js"></script>
+    <script src="async-promises.js"></script>
     
 </body>
 </html>
