--- a/assessment-async-promises/SpecRunner.html
+++ b/assessment-async-promises/SpecRunner.html
@@ -13,10 +13,10 @@
 
   <!-- include source files here... -->
   <script src="helper.js"></script>
-  <script src="async-promises-json.js"></script>
+  <script src="async-promises.js"></script>
 
   <!-- include spec files here... -->
-  <script src="test/spec/Async-promises-json-Spec.js"></script>
+  <script src="test/spec/Async-promises-Spec.js"></script>
 
 </head>
 
