--- a/assessment-async-promises-STUDENT-READY/SpecRunner.html
+++ b/assessment-async-promises-STUDENT-READY/SpecRunner.html
@@ -13,10 +13,10 @@
 
   <!-- include source files here... -->
   <script src="helper.js"></script>
-  <script src="arrays-and-for-loops.js"></script>
+  <script src="async-promises.js"></script>
 
   <!-- include spec files here... -->
-  <script src="test/spec/Arrays-and-for-loops-Spec.js"></script>
+  <script src="test/spec/Async-promises-Spec.js"></script>
 
 </head>
 
