--- a/assessment-json-STUDENT-READY/index.html
+++ b/assessment-json-STUDENT-READY/index.html
@@ -17,7 +17,7 @@
     <p>Checkout <a href="https://developer.chrome.com/devtools/docs/javascript-debugging">The chrome over view of debugging</a></p>
 
     <script src="helper.js"></script>
-    <script src="arrays-and-for-loops.js"></script>
+    <script src="json.js"></script>
     
 </body>
 </html>
