broke out constuctors and added student ready

--- a/assessment-prototypes-STUDENT-READY/SpecRunner.html
+++ b/assessment-prototypes-STUDENT-READY/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="test/lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="constructors-and-prototypes.js"></script>
+  <script src="prototypes.js"></script>
 
   <!-- include spec files here... -->
-  <script src="test/spec/Constructors-and-prototypes-Spec.js"></script>
+  <script src="test/spec/Prototypes-Spec.js"></script>
 
 </head>
 
