--- a/assessment-prototypes-STUDENT-READY/index.html
+++ b/assessment-prototypes-STUDENT-READY/index.html
@@ -16,7 +16,7 @@
     
     <p>Checkout <a href="https://developer.chrome.com/devtools/docs/javascript-debugging">The chrome over view of debugging</a></p>
 
-    <script src="constructors-and-prototypes.js"></script>
+    <script src="prototypes.js"></script>
     
 </body>
 </html>
